# cognitive-canvas

./: .gitignore  Cargo.toml  README.md  outline.py
Immutable/: SHAmasterpassword.txt  SHApassword.txt  help.txt
documents/: 1.txt  main.txt  todo.txt
src/: commands.rs  crypto.py  figlet.rs  main.rs  mycrypto.rs  myio.rs  password.rs  terminal.rs
